--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
   text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(85, 180, 57);
+}
+#Header {
+  color: lightskyblue;
 }
