--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(85, 180, 57);
+  /* background-color: rgb(85, 180, 57); */
+  /* margin: 50; */
 }
 #Header {
   color: lightskyblue;
